# streptofile

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
conda/: meta.yaml
mlst_test_2/: scheme.json
spyogenes_mlst/: spyogenes_alleles.fasta  spyogenes_alleles.ndb  spyogenes_alleles.nhr  spyogenes_alleles.nin  spyogenes_alleles.njs  spyogenes_alleles.nog  spyogenes_alleles.nos  spyogenes_alleles.not  spyogenes_alleles.nsq  spyogenes_alleles.nto
src/streptofile/: emm_typer.py  mlstyper.py  run_streptofile.py  streptofile.py  virulence_profiler.py
src/streptofile/db/: alltrimmed.tfa
streptofile/: meta.yaml
test3/: emm_results.tsv
test_data/: GCA_003240915.2_ASM324091v2_genomic.fna  GCA_005163565.1_ASM516356v1_genomic.fna  GCA_034693025.1_PDT002036313.1_genomic.fna  GCA_034705955.1_PDT001983156.1_genomic.fna  GCA_034706255.1_PDT001983144.1_genomic.fna  GCA_037112455.1_PDT002108051.1_genomic.fna  GCA_045074345.1_PDT002175197.1_genomic.fna  GCA_054580385.1_ASM5458038v1_genomic.fna  GCF_000167435.2_ASM16743v2_genomic.fna  GCF_001535505.1_ASM153550v1_genomic.fna  GCF_001982785.1_ASM198278v1_genomic.fna  GCF_002268475.1_ASM226847v1_genomic.fna  GCF_009906775.1_ASM990677v1_genomic.fna  GCF_009906805.1_ASM990680v1_genomic.fna  test1.emm.blast.tsv  test2.emm.blast.tsv  test3.emm.blast.tsv  test4.emm.blast.tsv  test5.emm.blast.tsv  test6.emm.blast.tsv
test_output/GCA_034705955.1_PDT001983156.1_genomic/: mlst_blast.tsv  virulence_blast.tsv
test_output_emm/: results.tsv
test_output_virulence/: results.matrix.tsv  results.tsv
tests/: run_test.py
(+80 files in other folders)
